--- a/index.html
+++ b/index.html
@@ -29,28 +29,33 @@
     <table class="table my-5 table-striped">
         <thead>
             <tr>
-                <th scope="col">#</th>
-                <th scope="col">le plus jeune</th>
-                <th scope="col">le plus vieux</th>
-                <th scope="col">la plus forte note</th>
-                <th scope="col">la plus faible note</th>
+                <th scope="col">Caractéristiques</th>
+                <th scope="col">nom</th>
+                <th scope="col">valeur</th>
+
+
             </tr>
         </thead>
         <tbody id="eleve">
             <tr>
-                <th>nom</th>
+                <th scope="col">le plus jeune</th> 
                 <td>élève 3</td>
-                <td>élève 6</td>
-                <td>élève 5</td>
-                <td>élève 2</td>
+                <td>12</td>
             </tr>
             <tr>
-                <th>valeur</th>
-                <td>12</td>
+                <th scope="col">le plus vieux</th>
+                <td>élève 6</td>
                 <td>17</td>
-                <td>20</td>
-                <td>8</td>
             </tr>
+            <tr>
+                <th scope="col">la plus forte note</th>
+                <td>élève 5</td>
+                <td>20</td>
+            </tr>
+            <tr>
+                <th scope="col">la plus faible note</th>
+                <td>élève 2</td>
+                <td>08</td>
         </tbody>
     </table>
 
