--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tableau javascript atelier</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        <title>tableau javascript atelier</title>
 </head>
 
 <body>
@@ -30,30 +30,30 @@
         <thead>
             <tr>
                 <th scope="col">Caractéristiques</th>
-                <th scope="col">nom</th>
-                <th scope="col">valeur</th>
+                <th scope="col">Nom</th>
+                <th scope="col">Valeur</th>
 
 
             </tr>
         </thead>
-        <tbody id="eleve">
+        <tbody>
             <tr>
-                <th scope="col">le plus jeune</th> 
+                <th scope="col">Le plus jeune</th> 
                 <td>élève 3</td>
                 <td>12</td>
             </tr>
             <tr>
-                <th scope="col">le plus vieux</th>
+                <th scope="col">Le plus vieux</th>
                 <td>élève 6</td>
                 <td>17</td>
             </tr>
             <tr>
-                <th scope="col">la plus forte note</th>
+                <th scope="col">La plus forte note</th>
                 <td>élève 5</td>
                 <td>20</td>
             </tr>
             <tr>
-                <th scope="col">la plus faible note</th>
+                <th scope="col">La plus faible note</th>
                 <td>élève 2</td>
                 <td>08</td>
         </tbody>
